=========
CHANGELOG
=========

2.7.1+dev  (XXXX-XX-XX)
=======================


2.7.1  (2023-02-17)
=======================

* Fix link between attachment and file is lost when updating old attachment (created in version <2.7.0) without random suffix

2.7.0  (2023-02-15)
=======================

* Add safety checks on uploaded files
* Fix link to the project on Pypi when clicking the pypi badge (another pypi project is named `django-paperclip`)
* Fix typo in test-supporting HTML files (nothing was broken though)


2.6.1      (2022-07-07)
=======================

* Change setting names : `PAPERCLIP_MIN_ATTACHMENT_HEIGHT`, `PAPERCLIP_MIN_ATTACHMENT_WIDTH` => `PAPERCLIP_MIN_IMAGE_UPLOAD_WIDTH`, `PAPERCLIP_MIN_IMAGE_UPLOAD_HEIGHT`
* Fix check size of image only when it's an image


2.6.0      (2022-07-06)
=======================

** New **

* Add `PAPERCLIP_MAX_BYTES_SIZE_IMAGE` max size image form
* Add `PAPERCLIP_MIN_ATTACHMENT_HEIGHT` min height image form
* Add `PAPERCLIP_MIN_ATTACHMENT_WIDTH` min width image form


2.5.1      (2022-07-05)
=======================

* Add blocks templates


2.5.0      (2022-04-26)
=======================

** New **

* Add field license on attachment


2.4.3      (2022-04-08)
=======================

* Replace french column name to english column name


2.4.2      (2022-03-29)
=======================

** Fixes **

* Fix js init mode embed type should be File and not Youtube


2.4.1      (2022-03-18)
=======================

** Fixes **

* Fix form enable_link javascript


2.4.0      (2022-01-10)
=======================

** New **

* Support Django 4.0


2.3.4 (2021-12-13)
=======================

**New features**

- Add PAPERCLIP_RESIZE_ATTACHMENTS_ON_UPLOAD setting to enable resize attachments on upload
- Add PAPERCLIP_MAX_ATTACHMENT_WIDTH and PAPERCLIP_MAX_ATTACHMENT_HEIGHT to configure attachment resizing (defaults 1280px)
 

2.3.3      (2021-09-03)
=======================

** New **

* Display custom columns in attachment list
