@@ -116,12 +116,4 @@ class AttachmentForm(forms.ModelForm):
         if "attachment_file" in self.changed_data:
             # New file : regenerate new random suffix for this attachment
             self.instance.random_suffix = None
-            return super().save(*args, **kwargs)
-        else:
-            # Do not run attachement_file.save if no update needed or file will be duplicated
-            instance = super().save(commit=False)
-            skip_file_save = True
-            if not instance.random_suffix:  # Update still needed for old attachments (not suffixed before)
-                skip_file_save = False
-            instance.save(**{'skip_file_save': skip_file_save})
-            return instance
+        return super().save(*args, **kwargs)
