@@ -5,6 +5,7 @@ CHANGELOG
 2.7.1+dev  (XXXX-XX-XX)
 =======================
 
+* Fix link between attachment and file is lost when updating old attachment (created in version <2.7.0) without title and random suffix
 
 2.7.1  (2023-02-17)
 =======================
